# rental-alert-bot

./: .env.example  .gitignore  index.html  pyproject.toml  railway.json
.github/workflows/: ci.yml
docs/: development-guide.html  development-process.html  railway-deployment.html  technical-spec.html
scripts/: backup_database.py  check.ps1  check_phase5_readiness.py  check_phase6_readiness.py  create_phase5_window.py  export_phase5_image_audit.py  init_database.py  monitor_status.py  run_local_service.py  run_monitor_loop.py  run_monitor_once.py  run_telegram_bot.py  validate_591_live.py  validate_phase4_manual.py  validate_phase5_runtime.py
src/rental_alert_bot/: __init__.py  __main__.py  bot_service.py  config.py  database.py  health_server.py  listing.py  logging_config.py  message_templates.py  monitoring_service.py  phase5_image_audit.py  phase5_readiness.py  phase5_validation.py  phase5_window.py  phase6_readiness.py  rental_client.py  rental_parser.py  rental_url.py  repository.py  scheduler.py  (+6 more)
tests/: test_backup_database_script.py  test_bot_service.py  test_config.py  test_database.py  test_health_server.py  test_logging_config.py  test_monitoring_service.py  test_phase5_image_audit.py  test_phase5_read_only_scripts.py  test_phase5_readiness.py  test_phase5_validation.py  test_phase5_window.py  test_phase6_readiness.py  test_rental_client.py  test_rental_parser.py  test_rental_url.py  test_repository.py  test_scheduler.py  test_smoke.py  test_status_report.py  test_telegram_client.py  test_telegram_polling_service.py  test_validate_phase4_manual.py
(+3 files in other folders)
