[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "rental-alert-bot"
version = "0.1.0"
description = "Personal Telegram alerts for new 591 rental listings."
requires-python = ">=3.12,<3.15"
dependencies = [
    "beautifulsoup4>=4.13,<5",
    "httpx>=0.28,<1",
]

[project.scripts]
rental-alert-bot = "rental_alert_bot.__main__:main"

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rental_alert_bot"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
